--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -6,3 +6,14 @@ header{
     margin-bottom: auto;
     background-color: #0B3073;
 }
+
+a{
+    color: var(--color-grey-scale-1);
+}
+
+.linha{
+    margin-top: 10vh;
+    display: block;
+    background-color: var(--color-grey-scale-3);
+    color: var(--color-destak-ligth);
+}
