--- a/frontend/src/Components/register/Register.css
+++ b/frontend/src/Components/register/Register.css
@@ -1,9 +1,4 @@
-
-.big-box{
-    background-color: var(--color-base-scale-1);
-}
-
 .bg-register-image {
-    background-image: url("../../img/placeholder01-unsplash.jpg");
-    
-  }
+  background-image: url("../../img/placeholder01-unsplash.jpg");
+  background-size: 100%;
+}
