funçoes register e Criação do ModalBalance
Handle submit do register e login  começados, criação do modal para inserir movimentação mas ainda não funciona com formulário dentro.

--- a/frontend/src/Components/main/Main.css
+++ b/frontend/src/Components/main/Main.css
@@ -12,7 +12,7 @@
 .main-card{
     min-height: 15vh;
     background-image: url('../../img/nature01.jpg');
-    background-position: center;
+    background-position: center top;
 }
 
 .cartoes{
