--- a/frontend/src/view/main/Main.css
+++ b/frontend/src/view/main/Main.css
@@ -1,9 +1,3 @@
-.side-bar{
-    background-color: var(--color-base-scale-1);
-    color: var(--color-grey-scale-4);
-    height: 100vh;
-}
-
 .main{
     height: 100vh;
     padding: 0px !important;
@@ -17,6 +11,7 @@
 
 .cartoes{
     padding: 0.25rem;
+    width: 550px;
 }
 .card-body{
     padding: 0.5rem !important;
@@ -52,7 +47,11 @@
     width: 60%;
 }
 
-
+#grafic{
+    width: 110%;
+    height: auto;
+    
+}
 
 
 
